unpackaged/main/default/objects/maps__LiveAsyncError__c/fields/maps__ClassName__c.field-meta.xml
<CustomField>
    <fullName>maps__ClassName__c</fullName>
    <description>The name of the class and, optionally the method, that the error originated.</description>
    <inlineHelpText>Nom de la classe, et éventuellement la méthode, d&#39;origine de l&#39;erreur.</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>