unpackaged/main/default/objects/maps__LiveAsyncError__c/fields/maps__Message__c.field-meta.xml
<CustomField>
    <fullName>maps__Message__c</fullName>
    <description>The value of the message received.</description>
    <inlineHelpText>La valeur du message reçu.</inlineHelpText>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>