unpackaged/main/default/objects/maps__LiveAsyncError__c/fields/maps__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>maps__ObjectId__c</fullName>
    <description>The Id of the sObject on which this error occurred.</description>
    <inlineHelpText>L&#39;ID de l&#39;objet avec lequel l&#39;erreur s&#39;est produite.</inlineHelpText>
    <label>Object Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>